# archibald

./: Cargo.toml  LICENSE-MIT  MIGRATION.md  README.md  plan.md
archibald/: Cargo.toml
archibald-core/: Cargo.toml
archibald-core/examples/: async_execution.rs  basic_usage.rs  transactions.rs
archibald-core/src/: builder.rs  error.rs  executor.rs  lib.rs  operator.rs  value.rs
archibald-core/src/builder/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
archibald/examples/: async_execution.rs  basic_usage.rs  column_alias_demo.rs  sqlite_usage.rs  transactions.rs
archibald/src/: error.rs  executor.rs  lib.rs  operator.rs  value.rs
archibald/src/builder/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
