[workspace]
members = [
    "archibald",
    # "archibald-macros", 
    # "archibald-migrate",
    # "archibald-postgres",
    # "archibald-mysql",
    # "archibald-sqlite",
    # "archibald-derive",
]
resolver = "2"

[workspace.dependencies]
# Core runtime
tokio = { version = "1.0", features = ["rt", "macros"] }
futures = "0.3"

# Serialization  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database foundation
sqlx = { version = "0.7", default-features = false }

# Error handling
thiserror = "1.0"

# Optional database types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
rust_decimal = { version = "1.0", features = ["serde"] }

# Dev dependencies
tokio-test = "0.4"
