[package]
name = "archibald"
version = "0.1.1"
edition = "2024"
description = "A knex inspired SQL query builder for Rust"
license = "MIT"
repository = "https://github.com/bmac/archibald"
keywords = ["knex", "query-builder", "querybuilder", "SQL", "PostgreSQL", "SQLite"]
readme = "../README.md"

[dependencies]
# Core runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization  
serde = { workspace = true }
serde_json = { workspace = true }

# Database foundation
sqlx = { workspace = true, features = ["runtime-tokio", "any"] }

# Error handling
thiserror = { workspace = true }

# Optional database types
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []

# Database drivers
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"] 
sqlite = ["sqlx/sqlite"]
# mssql = ["sqlx/mssql"]  # Not available in sqlx 0.7

# Optional type support
uuid-support = ["uuid"]
datetime-support = ["chrono"]
decimal-support = ["rust_decimal"]
all-types = ["uuid-support", "datetime-support", "decimal-support"]